Change jobs and write about mocha

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@ permalink: /about/
         <p>I help out at <a href="http://railsbridgecapetown.org/">Rails Bridge Cape Town</a></p></li><p></p>
 
       <li>
-        <p>I work at <a href="https://www.unboxedconsulting.com/">Unboxed Consulting</a></p></li><p></p>
+        <p>I work at <a href="http://www.go2africa.com/">Go2Africa</a></p></li><p></p>
 
      </ul>
    </div>
